--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "export": "next build",
-    "deploy": "gh-pages -d out",
+    "build:gh-pages": "cross-env GITHUB_PAGES=true next build",
+    "deploy": "npm run build:gh-pages && gh-pages -d out",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "lint:next": "next lint",
@@ -54,6 +55,7 @@
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.3",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "cross-env": "^7.0.3"
   }
 }
